--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
 #
+# Spring MVC properties
+#
+#spring.mvc.view.prefix: /
+#spring.mvc.view.suffix: .jsp
+spring.messages.basename=validation
+
+#
 # Security settings
 #
 
