Add registration, validation, products serivice, etc...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=nutrition
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.javax.persistence.validation.mode=none
 
 #
 # Spring MVC properties
