add dishes entity, validation, templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,9 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 #
 #spring.mvc.view.prefix: /
 #spring.mvc.view.suffix: .jsp
+#spring.mvc.hiddenmethod.filter.enabled=true
 spring.messages.basename=validation
+
 
 #
 # Security settings
