add menu template, update calculator.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.messages.basename=validation
 #
 # Server settings
 #
-server.servlet.session.timeout=120s
+server.servlet.session.timeout=15m
